--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -3,18 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="/vite-project/styles/design.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
   <body class="dark">
     <div id="app"></div>
-    <script type="module" src="../js/index.js"></script>
+    <script type="module" src="./js/index.js"></script>
       <div class="card"> <h1> Lebron </h1></div>
       <div class="card"> <h1> Stephen </h1></div>
       <div class="card"> <h1> Jayson </h1></div>
       <div class="card"> <h1> Luka </h1></div>
-      <button class="button"> Change Theme</button>
+      <button id='color' class="button"> Change Theme</button>
       <button type="button"> Filter By Greater than 4 letters</button>
       <h1 class ="dark"> hello</h1>
 
