--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -9,13 +9,10 @@
   <body class="dark">
     <div id="app"></div>
     <script type="module" src="./js/index.js"></script>
-      <div class="card"> <h1> Lebron </h1></div>
-      <div class="card"> <h1> Stephen </h1></div>
-      <div class="card"> <h1> Jayson </h1></div>
-      <div class="card"> <h1> Luka </h1></div>
       <button id='color' class="button"> Change Theme</button>
-      <button type="button"> Filter By Greater than 4 letters</button>
-      <h1 class ="dark"> hello</h1>
+      <button type="btn"> Filter By Greater than 4 letters</button>
+      <div id = "Card" > <h1></h1></div>
+
 
   </html>
   </body>
