--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -10,7 +10,7 @@
     <div id="app"></div>
     <script type="module" src="./js/index.js"></script>
       <button id='color' class="button"> Change Theme</button>
-      <button type="btn"> Filter By Greater than 4 letters</button>
+      <button id="btn"> Filter GOAT</button>
       <div id = "Card" > <h1></h1></div>
 
 
