--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -7,11 +7,12 @@
     <title>Vite App</title>
   </head>
   <body class="dark">
-    <div id="app"></div>
-    <script type="module" src="./js/index.js"></script>
-      <button id='color' class="button"> Change Theme</button>
+    <button id='color' class="button"> Change Theme</button>
       <button id="btn"> Filter GOAT</button>
+    <div id="app">
+    <script type="module" src="./js/index.js"></script>
       <div id = "Card" > <h1></h1></div>
+    </div>
 
 
   </html>
