--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -11,7 +11,7 @@
     <button id="btn"> Filter GOAT</button>
     <div id="app">
     <script type="module" src="./js/index.js"></script>
-      <div id = "Card" > <h1></h1></div>
+      <div id = "Card" > </div>
     </div>
 
 
